# aistio

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_zh.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  SECURITY.md  SECURITY_zh.md  go.mod  go.sum
docs/: _config.yml  _toc.yml  pyproject.toml  references.bib  setup.py
docs/_static/: custom.css  language.js  tabs.js
docs/_templates/: docs-site-header.html  language-switch.html  page.html  top-tabs.html
docs/_templates/sidebar/: brand.html  navigation.html
docs/en/: intro.md
docs/en/community/: chat-groups.md  contributors.md
docs/en/faq/: index.md
docs/en/quickstart/: agent.md  installation.md  key-concepts.md
docs/en/task/: agent-config.md  examples.md  hook.md  loop-engineering.md  mcp.md  message.md  model.md  permission.md  state.md  tool.md  workspace.md
docs/zh/: intro.md
docs/zh/community/: chat-groups.md  contributors.md  index.md
docs/zh/concepts/: architecture.md  key-concepts.md
docs/zh/controlplane/: adapter-spi.md  contract.md  getting-started.md  local-verify.md
docs/zh/experimental/: teams-and-sandbox.md
docs/zh/faq/: index.md
docs/zh/getting-started/: installation.md
docs/zh/guides/: agents.md  byo.md  model-and-mcp.md  sessions.md
docs/zh/operations/: deployment.md  operations.md
docs/zh/quickstart/: agent.md  feature-overview.md  installation.md  key-concepts.md
docs/zh/reference/: asdp.md  cli.md  data-plane-contract.md  rest-api.md
docs/zh/task/: agent-config.md  (+10 more)
(+144 files in other folders)
