# Copyright The Aistio Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "aistio-docs"
version = "0.2.0"
description = "Aistio 中文文档。"
readme = "./zh/intro.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "jupyter-book>=1.0.4.post1,<2.0.0",
    "furo>=2025.7.19",
    "sphinxcontrib-mermaid>=0.9.2",
]
